--- a/Buzzfizz.html
+++ b/Buzzfizz.html
@@ -20,14 +20,12 @@ for (var x=0, len=list.length; x <= 25; x++) {
 	else {
 		if (x%3 == 0 && x%5 == 0){
 			console.log ("fizzbuzz");
-				if ("fizzbuzz") {
-				continue
-			}
+				
 		}
-		if (x%3 == 0 ) {
+		else if (x%3 == 0 ) {
 			console.log("fizz");
 		}
-		if (x%5 == 0) {
+		else if (x%5 == 0) {
 			console.log("buzz");
 		}
 	}
