--- a/Buzzfizz.html
+++ b/Buzzfizz.html
@@ -11,9 +11,9 @@
 <script>
 
 
-list=Array ()
 
-for (var x=0, len=list.length; x <= 25; x++) {
+
+for (var x=0;  x<25; x++) {
 	if (x %3 && x % 5) {
 		console.log(x);
 	}
