--- a/MultiDimArray.html
+++ b/MultiDimArray.html
@@ -10,18 +10,28 @@
 
 <script>
 
+
+
 var students = ["Robert", "George", "Bart", "Lisa", "Homer"];
 var subjects = ["Ancient Greek", "Math", "Baking", "Needle work"];
 
 
-var rand = subjects[Math.floor(Math.random() * subjects.length) ];
+var rand = subjects.length;
+
+
 
 
 for (i=0; i<students.length; i++) {
-	console.log(students[i]+":"+"<br>");
-	for (rand in subjects) {
-console.log( subjects[rand] +":" + Math.floor(Math.random() * 100 + 1))
+	document.write(students[i]+":"+"<br>");
+	for (rand in subjects)
+	 {
+var x = Math.floor(Math.random() *100 + 1)
+document.write( subjects[rand] +":" + x + "<br>")
+
 }
+
+document.write ("Average: "  +  "<br>" )
+
 }
 
 </script>
