--- a/Reversing Array.html
+++ b/Reversing Array.html
@@ -1,3 +1,26 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+
+
+<script>
+
+/*duck = ["A","B","C"]
+	
+function reverseArray(array){
+	var y=[];
+
+	for (var i=array.length-1; i>=0; i--){
+		y.push(array[i])
+	}
+	return (y)
+
+}
+document.write (reverseArray(duck))
+*/
+document.write("<br>")
+
 var arrayValue = [10,11,12,]
 function reverseArrayInPlace(array){
 	var annoyed = [];
@@ -6,13 +29,20 @@ function reverseArrayInPlace(array){
 		annoyed.push(array[i-1]);}
 				for (x=array.length; x<=half; x++){
 		annoyed.push(array[x-array.length])
-	
-
-
 	}
-
 
 	return (annoyed)
 
 }
 document.write(reverseArrayInPlace(arrayValue))
+
+
+
+
+</script>
+
+
+
+
+</body>
+</html>
