--- a/NumbersArrays.html
+++ b/NumbersArrays.html
@@ -12,16 +12,32 @@ var str1= "egg,mango,avocado,banana,tomato,pizza,lemon";
 
 
 var numbers = [];
+var numbersTwo = [];
+var numbersThree = [];
 
-function findNumbersArray(arr){
+function findNumbersArray(arr, arrtwo, arrThree){
+
 for (i=0; i<arr.length; i++){
+
 	if (! isNaN (arr[i])){
-		numbers[i]=arr[i]
+		numbers.push(arr[i])		
 	}
+		if (! isNaN (arrtwo[i])){
+			numbers.push(arrtwo[i])
+	
+	}
+	
+		if (! isNaN (arrThree[i])){
+			numbers.push(arrThree[i])
+		}
+	
+
 }
 return numbers
 }
-	document.write (findNumbersArray(arr1))
+	document.write (findNumbersArray(arr1,arr2,arr3))
+	document.write("<br>")
+
 
 
 </script>
