--- a/NumbersArrays.html
+++ b/NumbersArrays.html
@@ -32,6 +32,7 @@ for (i=0; i<arr.length; i++){
 	
 
 }
+numbers.sort (numbers)
 return numbers
 }
 	document.write (findNumbersArray(arr1,arr2,arr3))
