--- a/NumbersArrays.html
+++ b/NumbersArrays.html
@@ -94,6 +94,48 @@ for (i=0; i<arrays2.length; i++){
 		
 	}
 	console.log(giveAmountToParamater(arr1,arr2,arr3,splitString(str1)))
+	
+	
+		function showCount(arr){
+	var arr1 = [1, 5, "bread", 84, "lemon", "tomato", 120, "egg"];
+	var arr2 = ["pickle", "banana", 23, 127, 555, 1, "mango"];
+	var arr3 = ["elephant", "gorilla", 33, 195, "mamota", "mango"];
+	var str1= "egg,mango,avocado,banana,tomato,pizza,lemon";
+	str2 = arr.split(",")
+
+	var arrays = arr1.concat(arr2)
+	var arrays2 = arrays.concat(arr3)
+	var arrays3 = arrays2.concat(str2)
+
+	var obj = {}
+
+	var words = []
+
+for (i=0; i<arrays3.length; i++){
+
+			if (typeof arrays3[i] === 'string'){
+				words.push(arrays3[i])
+			}
+		}
+
+
+
+
+	for (var i = 0, j = words.length; i < j; i++) {
+   obj[words[i]] = (obj[words[i]] || 0) + 1;
+     
+
+     	}
+
+     	for (var i = 0, j = words.length; i<j; i++) {
+     		arr = (obj[words[i]] || 0) ;
+     	}
+
+
+    
+
+return  arr
+	}
 
 
 
